# swe-repo-notify

./: .env.example  .gitignore  Dockerfile.poller  README.md  pyproject.toml
api/: schemas.py  security.py  server.py
api/tests/: test_api.py
common/: models.py
deploy/: poller.cron
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
github_poller/: matcher.py  parser.py  poller.py
github_poller/tests/: test_integration.py  test_matcher.py  test_parser.py  test_poller.py
job_scraper/: enrich.py  scraper.py
job_scraper/tests/: test_enrich.py  test_scraper.py
notification/: orchestrator.py  runner.py  senders.py  service.py  users.py
notification/tests/: test_runner.py
persistence/: db.py  lock.py  repositories.py
persistence/tests/: test_lock.py
tests/: test_github_live.py  test_notification.py  test_orchestrator.py  test_persistence.py
